fixing grid and badge alignment

--- a/website/src/components/global/oss-badge.module.scss
+++ b/website/src/components/global/oss-badge.module.scss
@@ -3,19 +3,25 @@
 .ossImage {
   margin-right: auto;
   margin-left: auto;
-  height: 12.5rem; // 200px *
-  width: 12.5rem; // 200px *
-  max-width: 12.5rem; // 200px *
+  height: 12.5rem;
+  width: 12.5rem;
+  max-width: 12.5rem;
   padding: 0;
   cursor: pointer;
 
   @media ($media-breakpoint-sm) {
-    width: 16.25rem; // 260px *
+    width: 16.25rem;
+    height: 16.25rem;
+    max-width: 16.25rem;
     max-width: initial;
+    grid-area: left / left / left / left;
+    place-self: flex-start flex-end;
   }
 
   @media ($media-breakpoint-md) {
-    width: 18.75rem; // 300px *
+    width: 20rem;
+    height: 20rem;
+    max-width: 20rem;
     margin-right: 0;
     margin-left: auto;
   }
